Added shared folders via acl

--- a/assets/config/dovecot/conf.d/10-mail.conf
+++ b/assets/config/dovecot/conf.d/10-mail.conf
@@ -8,6 +8,7 @@ mail_location = maildir:{{MAIL_DIR}}/%d/%n/Maildir
 
 # define Junk and trash folder
 namespace inbox {
+  type = private
   inbox = yes
 
   mailbox Junk {
@@ -26,4 +27,15 @@ namespace inbox {
   mailbox "Sent Messages" {
     special_use = \Sent
   }
+}
+
+# define settings for shared mailboxes
+namespace {
+  type = shared
+  seperator = /
+  prefix = shared/%%d/%%u/
+  # point to the shared mailbox & store seen flags per user
+  location = maildir:{{MAIL_DIR}}/%%d/%%n/Maildir:INDEXPVT={{MAIL_DIR}}/%d/%n/shared/%%d/%%n
+  subscriptions = no
+  list = children
 }
